# raft

./: .gitignore  LICENSE  Makefile  README.md  mond.cabal  raft.cabal
src/: Node.hs  Raft.hs
src/Raft/: Election.hs  Membership.hs  Replication.hs  Safety.hs
test/: NodeSpec.hs  Spec.hs  TestOrphans.hs
