name:                mond
version:             0.1.0.0
synopsis:            Process monitoring under the raft protocol
description:         Please see README.md
homepage:            https://github.com/stites/mond#readme
license:             BSD3
license-file:        LICENSE
author:              Sam Stites
maintainer:          sam@stites.io
copyright:           Copyright: (c) 2015-2016 Sam Stites
category:            System Daemons
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Node
  build-depends:       base >= 4.7 && < 5
                    -- generic "nice-to-haves"
                     , containers
                     , unordered-containers
                     , vector
                     , bytestring
                     , text
                     , lens
                     , mtl
                     , transformers

                    -- networking
                     , aeson
                     , wreq
                     , network

                    -- streaming
                     , pipes
                     , pipes-http

                    -- benchmarking
                     , time
                     , criterion
  default-language:    Haskell2010

executable mond
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mond
                     , optparse-applicative
                     , fast-logger
  default-language:    Haskell2010

test-suite mond-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mond
                     , mtl
                     , transformers
                     , hspec
                     , QuickCheck
                     , checkers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stites/mond
